# espectre

./: Cargo.toml  LICENSE  README.md
docker/: Dockerfile
firmware/main/: CMakeLists.txt
server/: Cargo.toml
server/models/: baseline.npy  feat_mean.npy  feat_std.npy
server/src/: dl_classifier.rs  espectre.rs  lib.rs  main.rs  rvf_container.rs  trained_mlp.rs
training/: prepare_data.py  train_sklearn.py
training/models/: csi_cnn_light.pt
training/prepared/: feat_mean.npy
ui/: heatmap.html  sleep.html  train.html
wifiscan/: Cargo.toml
wifiscan/src/: error.rs  lib.rs
wifiscan/src/adapter/: wlanapi_scanner.rs
